<resources>
    <string name="app_name">Android Task</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="must_be_at_least_6_characters">Must be at least 6 characters</string>
    <string name="login_success">Login success</string>
    <string name="login_failed">Login failed</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="logout">Logout</string>

    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="photos">Photos</string>
    <string name="posts">Posts</string>
    <string name="hackerkernel">HackerKernel</string>
    <string name="getting_details">Getting details…</string>
    <string name="failed_to_fetch_details">Failed to fetch details</string>
    <string name="featured_articles">Featured Articles</string>
    <string name="featured_videos">Featured videos</string>
    <string name="read_now">Read Now</string>
</resources>
